<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/color_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_700">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_11sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="5dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imgBack"
            
            android:text="@string/string_settings"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bannerads_placement"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="3dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    
                    android:text="@string/string_closing_method"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />

                <Spinner
                    android:id="@+id/spinnerClosingMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="#fff"
                    android:paddingRight="15dp" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:rotation="270"
                    android:src="@drawable/ic_back" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    
                    android:text="@string/string_show"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />

                <ToggleButton
                    android:id="@+id/switchLock"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/cb_selector"
                    android:checked="false"
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    
                    android:text="@string/string_show_per"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />

                <ToggleButton
                    android:id="@+id/switchPer"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/cb_selector"
                    android:checked="true"
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    
                    android:text="@string/string_show_anim"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />

                <ToggleButton
                    android:id="@+id/switchShow"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/cb_selector"
                    android:checked="true"
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
